Fix overlap in official comments
The actions button overlaps with the "Official comment" label, so this
re-adds the margin from v1. We can't add class names to {{actions}}, so
the styling is moved to an element selector.

--- a/styles/_actions.scss
+++ b/styles/_actions.scss
@@ -1,12 +1,16 @@
 /***** Actions *****/
 /* Styles admin and en user actions(edit, delete, change status) in comments and posts */
 .actions {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  cursor: pointer;
-  padding: 0;
   text-align: center;
   flex-shrink: 0; /*Avoid collapsing elements in Safari*/
+
+  & button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 15px 0;
+  }
 }
